# Hacker-HUD

./: .clang_complete  .gcc-flags.json  .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  CMakeListsPrivate.txt  base.cpp  clang-error.txt  esp8266.ino  index.html  platformio.ini
.pioenvs/: .sconsign.dblite  structure.hash
.pioenvs/nodemcuv2/: firmware.elf
Old_Main/: coyt_original_main.cpp  time.cpp
VFD Bitcoin Ticker/VFD_wifitest/: VFD_wifitest.ino
VFD Bitcoin Ticker/VFD_wifitest2/: VFD_wifitest2.ino
fs/hacker-hud/: hacker-hud.fs
lib/: CMakeLists.txt  display.h  eeprom.hpp  time.hpp  vfd.hpp
lib/ArduinoJson-master/test/: CMakeLists.txt
lib/option/: option.hpp
lib/scrape-web/: scrapeWeb.cpp  scrapeWeb.hpp  site.cpp  site.hpp
lib/time/: time.cpp  time.hpp
lib/vfd/: CMakeLists.txt  VFD.h  vfd.cpp  vfd.hpp  vfdBuilder.cpp  vfdBuilder.h  vfdBuilder.hpp
lib/wifi/: wifi.cpp  wifi.hpp
pio/: .gitignore  CMakeLists.txt  platformio.ini
pio/VFD Bitcoin Ticker/VFD_ticker/: VFD_ticker.ino
pio/VFD Bitcoin Ticker/VFD_wifitest2/: .VFD_wifitest2.ino.swp
pio/lib/: CMakeLists.txt
pio/lib/NTPClient/examples/Basic/: Basic.ino
pio/lib/display/: CMakeLists.txt  display.cpp  display.h
pio/lib/scrape-web/: scrapeWeb.cpp
pio/lib/vfd/: CMakeLists.txt  vfd.cpp  vfd.hpp
pio/src/: abstractSerial.hpp  coindesk.com_currentprice.json.txt  createClient.hpp  display.cpp  display.h  espInfo.hpp  example.com.txt  globals.hpp  grid.hpp  main.cpp  main.hpp  makeGetRequest.cpp  makeGetRequest.hpp  myAbstractClient.hpp  myAbstractSerial.hpp  myAlgorithm.hpp  myClient.hpp  myConcreteClient.hpp  myConcreteConnection.hpp  myConcreteSerial.hpp  myConnection.hpp  mySerial.hpp  notes.txt  option.hpp  scrapeWeb.hpp  serial.hpp  site.hpp  timeCache.hpp  todo.txt  transform.hpp  wifi.hpp
src/: CMakeLists.txt  bitcointicker.txt  coyt_test_main.cpp  espInfo.hpp  globals.hpp  globals.txt  main.cpp  notes.txt  oldcode.txt  option.hpp  scrapeWeb.hpp  site.hpp  snipits.txt  test.cpp  time.cpp  vfd.hpp  wifi.hpp  wificlient.txt
test/: CMakeLists.txt  CMakeListsPrivate.txt  Print.h  Printable.h  SoftwareSerial.h  Stream.h  WString.h  chronoTest.cpp  displayTest.cpp  frameSelectionTest.cpp  gTestProj.cpp  gridTest.cpp  makeGetRequestTest.cpp  myConcreteConnectionTest.cpp  postTest.cpp  scrapeWebTest.cpp  transformTest.cpp  vfdTest.cpp  winNetTest.cpp
test/arduinoStubs/: Arduino.h  Client.h  ESP8266WiFi.h  ESP8266WiFiAP.h  ESP8266WiFiGeneric.h  ESP8266WiFiSTA.h  HardwareSerial.h  IPAddress.h  Print.h  Printable.h  Server.h  SoftwareSerial.h  Stream.h  Updater.h  WString.h  WiFiClient.h  WiFiClientSecure.h  c_types.h  pgmspace.h
test/arduinoStubs/include/: slist.h
test/lib/: CMakeLists.txt
test/lib/display/: displayTest.cpp
test/lib/vfd/: CMakeLists.txt  vfdTest.cpp
