cmake_minimum_required(VERSION 3.2)
project(Hacker-HUD)

#SET(CMAKE_C_COMPILER "/home/richie/.platformio/packages/toolchain-xtensa/bin/xtensa-lx106-elf-gcc")
#SET(CMAKE_CXX_COMPILeR "/home/richie/.platformio/packages/toolchain-xtensa/bin/xtensa-lx106-elf-g++")
set(CMAKE_CXX_STANDARD 11)

add_subdirectory(pio)
add_subdirectory(test)
